--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -16,8 +16,5 @@
   "svelteBracketNewLine": false,
   "svelteIndentScriptAndStyle": true,
   "svelteAllowShorthand": true,
-  "plugins": [
-    "prettier-plugin-svelte",
-    "prettier-plugin-tailwindcss"
-  ]
+  "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"]
 }
